Actions
Bug #12639
closedn2piupc: smatch and NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointers:
../../sun4v/io/n2piupc/n2piupc_kstats.c: In function 'n2piupc_create_picN_kstat': ../../sun4v/io/n2piupc/n2piupc_kstats.c:186: error: passing argument 7 of 'kstat_create' makes integer from pointer without a cast ../../common/sys/kstat.h:793: note: expected 'uchar_t' but argument is of type 'void *' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../sun4v/io/n2piupc/n2piupc.c:112 _init() warn: statement has no effect 7
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit fd2e3606878080ff9881c6a5d17c0dc41a944a9a
commit fd2e3606878080ff9881c6a5d17c0dc41a944a9a Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T06:55:11.000Z 12639 n2piupc: smatch and NULL pointer errors Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions